<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BookPrice</string>
    <string name="title_head">Book Price</string>
    <string name="subtitle">An easy way to compare prices.</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Scanner strings -->
    <string name="scan_for_barcode">Scan for Barcode</string>
    <string name="search_hint">Search for a book</string>
    <string name="ref_txt">Scanning.</string>
    <string name="exp_txt_one">Place your barcode inside the grey markers.</string>
    <string name="exp_txt_two">Center it with the red marker.</string>
    <string name="scan_hint">You have the book with you right now? Just scan the barcode by hitting the button below, and we\'ll do the rest for you.</string>
    <string name="compare_prices">Compare Prices</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="pub_date">Riley Prod, Mar 2014</string>
    <string name="seller">Flipkart</string>
    <string name="price">$ 250.00</string>

</resources>