<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp" >

    <ImageView
        android:id="@+id/bpi_thumbnail"
        android:layout_width="40dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:contentDescription="@string/app_name"
        android:scaleType="centerInside"
        android:src="@drawable/ic_book_def" />

    <TextView
        android:id="@+id/bpi_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@id/bpi_thumbnail"
        android:text="@string/title"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/bpi_seller"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bpi_title"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@id/bpi_thumbnail"
        android:text="@string/seller"
        android:textSize="12sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/bpi_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bpi_seller"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@id/bpi_thumbnail"
        android:text="@string/price"
        android:textSize="12sp" />

</RelativeLayout>