<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ScrollView
        android:id="@+id/sv_book_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp" >

        <LinearLayout
            android:id="@+id/scroll_enabled_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/book_cover"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:contentDescription="@string/app_name"
                android:scaleType="fitXY"
                android:src="@drawable/ic_book_def" />

            <TextView
                android:id="@+id/book_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal"
                android:text="@string/title"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/book_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal"
                android:text="@string/author"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/book_pub_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal"
                android:text="@string/pub_date"
                android:textSize="14sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/book_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:gravity="left"
                android:text="@string/description"
                android:textSize="15sp" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/compare_prices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/custom_button_blue"
        android:padding="5dp"
        android:text="@string/compare_prices"
        android:textColor="#FFF"
        android:textSize="16sp"
        android:textStyle="bold" />

</RelativeLayout>